renamed seve.js and enhanced readme

--- a/gallery.html
+++ b/gallery.html
@@ -473,5 +473,5 @@ Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deseru
 
 </footer>
 <script src="js/jquery.js"></script>
-<script src="js/seve.js"></script>
+<script src="js/filterdiv.js"></script>
 </body></html>
